--- a/book/ki/knearestneighbor.ipynb
+++ b/book/ki/knearestneighbor.ipynb
@@ -72,7 +72,9 @@
     "3. Die Linien zeigen die *k* am nächsten gelegenen Tiere (die *\"Nachbarn\"* des angeklickten Punkts), wobei *k* die Zahl ist, die im Auswahlfeld unten gewählt wurde.\n",
     "4. Unter den 5 nächsten Nachbarn kommt keine Spezies eindeutig *am häufigsten* vor, d.h. keine Spezies hat eine eindeutige Mehrheit. (Unentschieden zwischen 2 Haien und 2 Igeln).\n",
     "5. Für *k=5*: Vogelspinne, aber für *k=4*: Fragezeichen. Erklärung: Es gibt bei *k=4* keine eindeutige Mehrheit untern den Nachbarn, d.h. keine Tierart, die am häufigsten unter den Nachbarn vorkommt.\n",
-    "6.\n",
+    "6. Es werden jeweils die *k* nächsten Nachbarn angezeigt. Für *k=1* wird nur der nächste Nachbar angezeigt, für *k=2* die zwei nächsten Nachbarn, usw.  Für *k=5* wird die Mehrheit der 5 nächsten Nachbarn angezeigt.  \n",
+    "   Sinnvolles *k* auswählen: *k=1* ist zu wenig, weil ein einzelner Nachbar nicht unbedingt repräsentativ ist (*Ausreißer*). Ein großes *k* robuster, aber dadurch geht unter Umständen die Genauigkeit verloren, weil \"örtliche Besonderheiten\" nicht mehr berücksichtigt werden. In unserem Beispiel würde z.B.\n",
+    "   *k=20* bedeuten, dass es vollkommen egal wird, wohin man klickt.\n",
     "7.  Eine mögliche Beschreibung des Verfahrens in zwei Sätzen findest du am Anfang des nächsten Abschnitts.\n",
     "``````"
    ]
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "remove-cell"
@@ -120,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -619,13 +621,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Wir fassen die bisherigen Schritte in einer Funktion zusammen\n",
-    "def k_naechste_nachbarn_bestimmen(unbekanntes_tier: Tier, gelabelte_daten: list[Tier], k: int) -> str:\n",
-    "    distanzen = berechne_manhattan_distanzen(unbekanntes_tier, gelabelte_daten)\n",
+    "def k_naechste_nachbarn_bestimmen(unbekanntes_tier: Tier, gelabelte_daten: list[Tier], k: int) -> tuple[str, list[Tier]]:\n",
+    "    \"\"\" Bestimmt die k nächsten Nachbarn eines unbekannten Tiers und deren häufigste Spezies.\n",
+    "    Parameter:\n",
+    "        unbekanntes_tier (Tier): Das Tier, dessen Spezies bestimmt werden soll.\n",
+    "        gelabelte_daten (list[Tier]): Liste von Tieren mit bekannten Spezies.\n",
+    "        k (int): Anzahl der nächsten Nachbarn.\n",
+    "    Rückgabe:\n",
+    "        tuple[str, list[Tier]]: Die häufigste Spezies und die k nächsten Nachbarn. \"\"\"\n",
+    "    \n",
+    "    distanzen: list[tuple[float, Tier]] = berechne_manhattan_distanzen(unbekanntes_tier, gelabelte_daten)\n",
     "    distanzen.sort()\n",
     "    k_nachbarn = k_naechste_nachbarn(k, distanzen)\n",
     "    haeufigkeiten = haeufigkeiten_ermitteln(k_nachbarn)\n",
@@ -642,7 +652,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def klassifiziere_und_plotte(test_tier: Tier, tiere: list[Tier], k: int) -> None:\n",
+    "    spezies, k_nachbarn = k_naechste_nachbarn_bestimmen(test_tier, tiere, k)\n",
+    "    print(f\"Das unbekannte Tier {test_tier} wird klassifiziert als: {spezies}\")\n",
+    "    klassifiziertes_tier = test_tier.kopie_mit_spezies(spezies)\n",
+    "    plotte_daten(tiere, klassifiziertes_tier, k_nachbarn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -667,15 +690,12 @@
     "test_tier = Tier(niedlichkeit=0.56, flauschigkeit=0.68, spezies=\"?\")\n",
     "k = 5  # Probiere auch andere kleine oder große Werte\n",
     "\n",
-    "spezies, k_nachbarn = k_naechste_nachbarn_bestimmen(test_tier, tiere, k)\n",
-    "print(f\"Das unbekannte Tier {test_tier} wird klassifiziert als: {spezies}\")\n",
-    "klassifiziertes_tier = test_tier.kopie_mit_spezies(spezies)\n",
-    "plotte_daten(tiere, klassifiziertes_tier, k_nachbarn)\n"
+    "klassifiziere_und_plotte(test_tier, tiere, k)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -700,10 +720,7 @@
     "test_tier = Tier(niedlichkeit=0.36, flauschigkeit=0.48, spezies=\"?\")\n",
     "k = 3  # Probiere mal k=7 und andere kleine oder große Werte\n",
     "\n",
-    "spezies, k_nachbarn = k_naechste_nachbarn_bestimmen(test_tier, tiere, k)\n",
-    "print(f\"Das unbekannte Tier {test_tier} wird klassifiziert als: {spezies}\")\n",
-    "klassifiziertes_tier = test_tier.kopie_mit_spezies(spezies)\n",
-    "plotte_daten(tiere, klassifiziertes_tier, k_nachbarn)\n"
+    "klassifiziere_und_plotte(test_tier, tiere, k)"
    ]
   },
   {
@@ -715,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -738,12 +755,9 @@
    ],
    "source": [
     "test_tier = Tier(niedlichkeit=0.56, flauschigkeit=0.48, spezies=\"?\")\n",
-    "k = 3  # Probiere mal k=7 und andere kleine oder große Werte\n",
+    "k = 3  \n",
     "\n",
-    "spezies, k_nachbarn = k_naechste_nachbarn_bestimmen(test_tier, tiere, k)\n",
-    "print(f\"Das unbekannte Tier {test_tier} wird klassifiziert als: {spezies}\")\n",
-    "klassifiziertes_tier = test_tier.kopie_mit_spezies(spezies)\n",
-    "plotte_daten(tiere, klassifiziertes_tier, k_nachbarn)\n"
+    "klassifiziere_und_plotte(test_tier, tiere, k)"
    ]
   }
  ],
