k-Means-Clustering überarbeitet

--- a/book/ki/kmeansclustering.ipynb
+++ b/book/ki/kmeansclustering.ipynb
@@ -92,7 +92,7 @@
     "\n",
     "Welche realen Anwendungsbeispiele kannst du dir vorstellen, bei denen das k-means Clustering sinnvoll eingesetzt werden könnte?\n",
     "\n",
-    "Überlege dabei, in welchen Bereichen es wichtig sein könnte, Daten in Gruppen aufzuteilen, ohne dass bereits vorgegeben ist, zu welcher Gruppe ein Datenpunkt gehört. Welche Situationen kennst du, in denen Menschen, Dinge oder Objekte aufgrund ihrer Ähnlichkeit in Gruppen eingeteilt werden müssen? Es gibt hier keine richtige Antwort, nur eine Auswahl an möglichen Einsatzszenarien.\n",
+    "Überlege dabei, in welchen Bereichen es wichtig sein könnte, Daten in Gruppen aufzuteilen, ohne dass bereits vorgegeben ist, zu welcher Gruppe ein Datenpunkt gehört. Welche Situationen kennst du, in denen Menschen, Dinge oder Objekte aufgrund ihrer Ähnlichkeit in Gruppen eingeteilt werden? Es gibt hier keine richtige Antwort, nur eine Auswahl an möglichen Einsatzszenarien.\n",
     "\n",
     "```{admonition} Beispiele\n",
     ":class: tip, dropdown\n",
@@ -109,17 +109,31 @@
    "source": [
     "## Der k-means-Clustering Algorithmus\n",
     "\n",
-    "Der Ablauf des k-means-Clustering Algorithmus lässt sich in ein paar einfachen Schritten zusammenfassen:\n",
+    "Der Ablauf des k-means-Clustering Algorithmus wird in folgende Schritte aufgeteilt:\n",
     "\n",
     "```{important}\n",
-    "1. Zuerst werden zufällig **k Zentroiden** ausgewählt. Das können entweder bestehende Punkte aus den Datenpunkten oder zufällig generierte Punkte sein.\n",
-    "2. Dann wird jeden Datenpunkt dem **nächstgelegenen Zentroiden** zugewiesen, sodass Cluster gebildet werden.\n",
-    "3. Nachdem alle Datenpunkte zugewiesen sind, werden die Zentroiden neu berechnet, indem der Durchschnitt (**Mean**) aller Punkte innerhalb eines Clusters berechnet wird.\n",
-    "4. Schritt 2 und 3 werden solange wiederholt, bis die **Zentroiden sich nicht mehr ändern** oder eine maximale Anzahl an Iterationen erreicht ist.\n",
+    "**1. Auswahl der Anzahl der Cluster (k)**  \n",
+    "Der erste Schritt besteht darin, die **Anzahl der Cluster** festzulegen. Dies bestimmt, in wie viele Gruppen die Datenpunkte aufgeteilt werden sollen.\n",
     "\n",
-    "Folgende Kriterien sind dabei das Ziel:\n",
-    "- Die Ähnlichkeit der Datenpunkte **innerhalb** der einzelnen Clustern soll **möglichst hoch** sein.\n",
+    "**2. Initialisierung der Zentroiden**  \n",
+    "Als nächstes werden **k** Datenpunkte aus den Daten oder **k** zufällige Punkte ausgewählt, um die anfänglichen **Zentroiden** (Cluster-Zentren) zu bestimmen.\n",
     "\n",
+    "**3. Zuweisung der Datenpunkte und Bildung der Cluster**  \n",
+    "Jeder Datenpunkt wird dem nächstgelegenen Zentroiden zugewiesen. Dies wird durch die Messung der Entfernung zu allen Zentroiden bestimmt (z.B. mittels Euklidischer Distanz oder Manhattan Distanz).\n",
+    "\n",
+    "**4. Aktualisierung der Zentroiden**  \n",
+    "Die Zentroiden werden neu berechnet, indem der Durchschnitt (**Mean**) aller Punkte innerhalb eines Clusters berechnet wird.\n",
+    "\n",
+    "**5. Wiederholung der Schritte 3 und 4**  \n",
+    "Die Schritte 3 und 4 werden solange wiederholt, bis sich die Zentroiden nicht mehr ändern oder eine maximale Anzahl an Iterationen erreicht ist.\n",
+    "```\n",
+    "\n",
+    "Versuche mal zu überlegen, worin das Ziel des Algorithmus besteht? Denke dabei an die Ähnlichkeit der Datenpunkte **innerhalb** eines Clusters und Punkte aus **verschiedenen** Clustern.\n",
+    "\n",
+    "```{admonition} Lösung\n",
+    ":class: tip, dropdown\n",
+    "Folgende Kriterien sind das Ziel:\n",
+    "- Die Ähnlichkeit der Datenpunkte **innerhalb** der einzelnen Cluster soll **möglichst hoch** sein.\n",
     "- Die Ähnlichkeit der Datenpunkte **zwischen** den einzelnen Clustern soll **möglichst gering** sein.\n",
     "```\n",
     "\n",
@@ -134,7 +148,9 @@
     "2. Die Zentren werden dann neu berechnet, indem der Durchschnitt der Punkte in jeder Gruppe genommen wird.\n",
     "3. Dieser Prozess wiederholt sich: Die Datenpunkte werden immer wieder neu zugeordnet, und die Zentren verschieben sich dabei nach und nach.\n",
     "\n",
-    "Das Ziel ist, dass die Zentroiden eine Position erreichen, bei der sie sich nicht mehr groß bewegen, also eine stabile Lösung finden. Diese Stabilität wird auch Konvergenz genannt. Je nach Anfangslage der Zentroiden kann es länger dauern, bis der Algorithmus eine stabile Gruppierung erreicht hat. Deshalb sind mehrere Iterationen nötig, um sicherzustellen, dass die Cluster gut und sinnvoll gebildet werden.\n",
+    "Das Ziel ist, dass die Zentroiden eine Position erreichen, bei der sie sich nicht mehr groß bewegen, also eine stabile Lösung finden. Diese Stabilität wird auch **Konvergenz** genannt. Je nach Anfangslage der Zentroiden kann mehrere Interationen dauern, bis der Algorithmus eine stabile Gruppierung erreicht hat. Deshalb sind mehrere Iterationen nötig, um sicherzustellen, dass die Cluster gut und sinnvoll gebildet werden.\n",
+    "\n",
+    "Dieses iterative Verfahren führt schließlich zu einer optimalen Gruppierung der Datenpunkte, wobei jeder Punkt in dem Cluster landet, das am besten zu seinen Eigenschaften passt.\n",
     "```\n"
    ]
   },
@@ -144,7 +160,7 @@
    "source": [
     "## Ein konkretes Beispiel: Clustering von Obstsorten\n",
     "\n",
-    "Nehmen wir an, wir haben eine Daten über Obstsorten, einschließlich Informationen wie Gewicht, Farbe, Wassergehalt und Fruchtzuckergehalt. Wir möchten ähnliche Obstsorten in Clustern gruppieren, sodass die Obstsorten in den Clustern möglichst homogen sind. k-Means würde die Daten analysieren, Unterschiede und Gemeinsamkeiten erkennen und basierend darauf die Cluster bilden. Zum Beispiel könnte der Algorithmus Äpfel und Bananen in unterschiedliche Cluster einteilen, da sie sich im Wasser- und Fruchtzuckergehalt deutlich unterscheiden.\n",
+    "Nehmen wir an, wir haben Daten über Obstsorten mit Informationen wie Gewicht, Farbe, Wassergehalt und Fruchtzuckergehalt. Wir möchten ähnliche Obstsorten in Clustern gruppieren, sodass die Obstsorten möglichst homogen sind. k-Means analysiert die Daten, erkennt Unterschiede und Gemeinsamkeiten und bildet darauf basierend die Cluster. Zum Beispiel könnte der Algorithmus Äpfel und Bananen in unterschiedliche Cluster einteilen, da sie sich im Wasser- und Fruchtzuckergehalt unterscheiden.\n",
     "\n",
     "In {numref}`fig_kmeans_obst` haben wir eine Sammlung von Obstsorten: 🍎 (Apfel), 🍐 (Birne), 🍌 (Banane), 🍊 (Orange), 🍇 (Weintrauben), 🍓 (Erdbeere), 🍉 (Wassermelone), 🥭 (Mango). Wir möchten diese Obstsorten basierend auf Wasser- und Fruchtzuckergehalt in Cluster aufteilen.\n",
     "\n",
@@ -180,13 +196,6 @@
     "2. 🍎 (Apfel), 🍐 (Birne), 🍊 (Orange) mittlerer Fruchtzuckergehalt mit hohem Wassergehalt\n",
     "3. 🍓 (Erdbeere), 🍉 (Wassermelone) niedriger Fruchtzuckergehalt mit sehr hohem Wassergehalt\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Programmierung des Algorithmus"
    ]
   }
  ],
