k-Means Arbeitsblatt in ki hinterlegt

--- a/book/ki/kmeansclustering.ipynb
+++ b/book/ki/kmeansclustering.ipynb
@@ -197,6 +197,21 @@
     "3. 🍓 (Erdbeere), 🍉 (Wassermelone) niedriger Fruchtzuckergehalt mit sehr hohem Wassergehalt\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ein Beispiel zum Nachrechnen\n",
+    "\n",
+    "Du weißt nun, wie der Algorithmus funktioniert und was das Ergebnis ist. Am besten kannst du das nachvollziehen, indem du den Algorithmus selbst mal durchführst. Lade dir dieses\n",
+    "{Download}`a text file<./other-file.txt>` xxx {download}`Aufgabenblatt <./aufgabenblaetter/arbeitsblatt_kmeanclustering.pdf>` herunter und bearbeite es. Die Anweisungen findest du dem Arbeitsblatt. Viel Erfolg 😎"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
